REGRESSION (r123767): platform/gtk/accessibility/object-with-title.html failing on GTK https://bugs.webkit.org/show_bug.cgi?id=92477

Reviewed by Chris Fleizach.

Source/WebCore:

Consider title and accessibilityDescription together with helpText to
decide whether an object should be exposed in the accessibility tree.

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::accessibilityIsIgnored):

LayoutTests:

Remove passing test from TestExpectations.

* platform/gtk/TestExpectations:

Canonical link: https://commits.webkit.org/110437@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124003 268f45cc-cd09-0410-ab3c-d52691b4dbfc